feat: add type in donor
